--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <junit.version>5.10.2</junit.version> <testcontainers.version>1.21.2</testcontainers.version>
         <postgresql.version>42.7.3</postgresql.version>
         <hikari.version>5.1.0</hikari.version>
@@ -27,7 +28,7 @@
         <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
         <cucumber.version>7.18.0</cucumber.version>
         <cucumber.messages.version>24.1.0</cucumber.messages.version>
-    </properties>
+        <gson.version>2.11.0</gson.version>         <snakeyaml.version>2.2</snakeyaml.version> <jackson.version>2.17.1</jackson.version> </properties>
 
     <dependencies>
         <dependency>
@@ -45,13 +46,13 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
+            <version>${junit.version}</version> <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-suite</artifactId>
-            <version>1.10.2</version> <scope>test</scope>
+            <version>1.10.2</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -136,6 +137,7 @@
             <artifactId>jooq-codegen</artifactId>
             <version>${jooq.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.rabbitmq</groupId>
             <artifactId>amqp-client</artifactId>
@@ -153,10 +155,28 @@
             <artifactId>javafaker</artifactId>
             <version>${faker.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.11.0</version>
+            <version>${gson.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>${snakeyaml.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
@@ -262,7 +282,6 @@
                                             <key>nameCase</key>
                                             <value>lower</value>
                                         </property>
-
                                     </properties>
                                 </database>
                                 <target>
